[Terry N.] various improvements to get the test classes working.  Fix issues with launching the gridkit.jar.  Write out .viskit dir files to the console from build.xml
git-svn-id: svn+ssh://eos.nps.edu/usr/local/svn/wcm/Viskit/trunk@2334 0de750ab-c0a9-dc11-9d74-0011435b89d6